<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.marketrehberim.ui.view.home.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.marketrehberim.ui.view.search.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search">
        <argument
            android:name="query"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/basketFragment"
        android:name="com.marketrehberim.ui.view.basket.BasketFragment"
        android:label="@string/basket_title"
        tools:layout="@layout/fragment_basket" />
    <fragment
        android:id="@+id/crowdsourceFragment"
        android:name="com.marketrehberim.ui.view.crowdsource.CrowdsourceFragment"
        android:label="@string/nav_report"
        tools:layout="@layout/fragment_crowdsource" />
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.marketrehberim.ui.view.detail.ProductDetailFragment"
        android:label="@string/product_detail"
        tools:layout="@layout/fragment_product_detail">
        <argument
            android:name="item"
            app:argType="com.marketrehberim.data.model.Item" />
    </fragment>
</navigation>